--- a/portfolio/static/css/style.css
+++ b/portfolio/static/css/style.css
@@ -11,7 +11,6 @@
 
 body {
     margin-top: 80px;
-    background-color: pink;
     font-family: sans-serif;
 }
 
@@ -33,10 +32,14 @@ body {
 }
 
 .main {
+    display: flex;
+    justify-content: center;
     margin: 0 auto;
 }
 
-.main__about {
+.main--about,
+.main--error {
+    flex-direction: column;
     max-width: 500px;
     padding: 0 1rem;
     line-height: 150%;
@@ -60,7 +63,7 @@ body {
 }
 
 .contact__link {
-    color: black;
+    color: #1c2023;
     text-decoration: none;
     box-shadow: 0 3px 0 0 #4cafda;
 }
@@ -69,6 +72,100 @@ body {
     color: #4cafda;
 }
 
-u-bare-link {
+.u-bare-link {
     text-decoration: none;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: 1fr;
+    column-gap: 1.25rem;
+    justify-content: center;
+    justify-items: center;
+    max-width: 21.875rem;
+    margin: 0 auto;
+}
+
+.project-card {
+    padding: 0.75rem 0;
+}
+
+.project-card__image {
+    max-width: 100%;
+    padding: 0.75cm 0;
+    transition: transform 0.2s ease-in-out;
+}
+
+.project-card__meta {
+    padding: 0 1.25rem;
+}
+.project-card__name {
+    margin: 0;
+    font-size: 1.5rem;
+    line-height: 2.25rem;
+    color: #1c2023;
+}
+
+.project-card:hover .project-card__image {
+   transform:  translateY(-0.5rem);
+}
+
+.project-card:hover .project-card__name {
+    text-decoration: underline;
+}
+
+.categories {
+    display: flex;
+    padding: 0;
+    margin: 0 0 0.75rem;
+    color: #3d84a3;
+    list-style: none;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    letter-spacing: 0.075;
+}
+
+.categories__tag:not(:last-of-type)::after {
+    content: "|";
+    margin: 0 0.25rem;
+}
+
+.hero {
+    width: 100%;
+    margin-bottom: 1.5rem;
+}
+
+.project {
+    display: flex;
+    flex-direction: column;
+    max-width: 50rem;
+    font-size: 1.2rem;
+    align-items: center;
+    padding: 0 1rem;
+}
+
+.project__content {
+    flex: 7;
+    margin-right: 3rem;
+    padding: 0;
+    margin-bottom: 1rem;
+    line-height: 150%;
+}
+
+@media only screen and (min-width: 48.75rem) {
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+        max-width: 45rem;
+    }
+    .project {
+        flex-direction: row;
+        padding: 0;
+    }
+}
+
+@media only screen and (min-width: 70rem) {
+    .projects {
+        grid-template-columns: repeat(3, 1fr);
+        max-width: 68rem;
+    }
 }
