--- a/app/templates/project-drum-set.html
+++ b/app/templates/project-drum-set.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+<!-- The body for the drum-set project. -->
 {% block content %}
 <main class="main main--project">
     <div>
