--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -53,6 +53,7 @@ body {
   flex-direction: column;
   max-width: 500px;
   padding: 0 1rem;
+  /* A common readability setting */
   line-height: 150%;
 }
 
