--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,4 +1,4 @@
-<!-- A simple 404 error page. -->
+<!-- A simple 500 error page. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,9 +13,9 @@
 </head>
 <body>
    <main>
-    <h1>404 - Page Not Found</h1>
+    <h1>500 - Internal Server Error</h1>
     <p>
-        Sorry, we couldn't find the page you were looking for.
+        Sorry, something went wrong with the server.
     </p>
     <a href="{{ url_for('home') }}">Go to home</a>
    </main>
