--- a/app/templates/project-memory-game.html
+++ b/app/templates/project-memory-game.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+<!-- The body for the memory-game project. -->
 {% block content %}
 <main class="main main--project">
     <div>
