--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,31 +1,18 @@
 {% extends "base.html" %}
 
-<!-- Projects to be shown in a css grid via a for loop. -->
-<!-- Projects are described via a common dictionary format detailed in __init__.py -->
-<!-- The body for the grid of projects page. -->
+<!-- The body for the about page. -->
 {% block content %}
-<main class="main">
-    <section class="projects">
-        {% for project in projects %}
-        <a class="u-bare-link" href="{{ url_for('project', slug=project['slug']) }}">
-            <!-- The card (which if within an anchor tag - fully clickable). -->
-            <article class="project-card">
-                <img class="project-card__image" src="{{ url_for('static', filename=project['thumb']) }}"
-                    alt="{{ project['name'] }} hero image">
-                <header class="project-card__meta">
-                    <ul class="categories">
-                        <!-- A list of all the categories (technologies used) for the project. -->
-                        {% for category in project["categories"] %}
-                        <li class="categories__tag">{{ category }}</li>
-                        {% endfor %}
-                    </ul>
-                    <!-- The name of this project. -->
-                    <h2 class="project-card__name">{{ project["name"] }}</h2>
-                </header>
-            </article>
-        </a>
+<main class="main main--about">
 
-        {% endfor %}
-    </section>
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, eum ipsum? Harum quas eveniet assumenda beatae voluptates vitae tempore, amet mollitia. Sit explicabo rem id quia officiis minus recusandae quasi unde illum, architecto ipsa cupiditate quidem assumenda non sequi mollitia ullam totam! Minus assumenda pariatur doloremque asperiores esse perspiciatis iusto.
+    </p>
+    <p>
+    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae aut eum amet. Eaque, harum modi. Laboriosam itaque, dolores reiciendis odit repellendus laudantium quam sit temporibus quisquam tempore exercitationem, in sint?
+    </p>
+    <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptas error, in vel repellat, voluptatum soluta illo numquam nobis ad dicta officia, deserunt eveniet qui.
+    </p>
+
 </main>
 {% endblock %}
