--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -2,34 +2,30 @@
 
 <!-- The body for the contact page. -->
 {% block content %}
-<main class="main main--content">
-
-    <dl>
-        <div class="contact">
-            <dt>Email:</dt>
-            <dd class="contact__details">
-                <a class="contact__link" href="mailto:j.doe@email.com">
-                    jdoe [at] email.com
-                </a>
-            </dd>
+<main class="my-contacts">
+    <div class="my-center-element">
+        <div class="w3-container my-contact">
+            <a href="mailto:s.i.fraser@outlook.com" class="my-contact-link"><i class="fa-regular fa-envelope"></i>
+                Email</a>
         </div>
-        <div class="contact">
-            <dt>Bitbucket:</dt>
-            <dd class="contact__details">
-                <a class="contact__link" href="https://bitbucket.org">
-                    @jdoe
-                </a>
-            </dd>
+    </div>
+    <div class="my-center-element">
+        <div class="w3-container my-contact">
+            <a href="https://www.linkedin.com/in/stewart-fraser-0851105" class="my-contact-link"><i
+                    class="fa-brands fa-linkedin"></i> LinkedIn</a>
         </div>
-        <div class="contact">
-            <dt>Github:</dt>
-            <dd class="contact__details">
-                <a class="contact__link" href="https://github.com">
-                    @jdoe
-                </a>
-            </dd>
+    </div>
+    <div class="my-center-element">
+        <div class="w3-container my-contact">
+            <a href="https://bitbucket.org/weebucket/workspace/repositories" class="my-contact-link"><i
+                    class="fa-brands fa-bitbucket"></i> Bitbucket</a>
         </div>
-    </dl>
-
+    </div>
+    <div class="my-center-element">
+        <div class="w3-container my-contact">
+            <a href="https://github.com/KoalaTreeHotel" class="my-contact-link"><i class="fa-brands fa-github"></i>
+                GitHub</a>
+        </div>
+    </div>
 </main>
 {% endblock %}
