--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -3,25 +3,25 @@
 <!-- The body for the contact page. -->
 {% block content %}
 <main class="my-contacts">
-    <div class="my-center-element">
+    <div class="my-contact-center-element">
         <div class="w3-container my-contact">
             <a href="mailto:s.i.fraser@outlook.com" class="my-contact-link"><i class="fa-regular fa-envelope"></i>
                 Email</a>
         </div>
     </div>
-    <div class="my-center-element">
+    <div class="my-contact-center-element">
         <div class="w3-container my-contact">
             <a href="https://www.linkedin.com/in/stewart-fraser-0851105" class="my-contact-link"><i
                     class="fa-brands fa-linkedin"></i> LinkedIn</a>
         </div>
     </div>
-    <div class="my-center-element">
+    <div class="my-contact-center-element">
         <div class="w3-container my-contact">
             <a href="https://bitbucket.org/weebucket/workspace/repositories" class="my-contact-link"><i
                     class="fa-brands fa-bitbucket"></i> Bitbucket</a>
         </div>
     </div>
-    <div class="my-center-element">
+    <div class="my-contact-center-element">
         <div class="w3-container my-contact">
             <a href="https://github.com/KoalaTreeHotel" class="my-contact-link"><i class="fa-brands fa-github"></i>
                 GitHub</a>
