--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,26 +19,26 @@
             <!-- Do underline non-active gray links on hover. -->
             {% if request.path == url_for('home') %}
                 <a href="{{ url_for('home') }}" class="w3-text-gray w3-bar-item w3-padding-16 
-                my-navlink-active">Home</a>
+                my-nav-link-active">Home</a>
             {% else %}
                 <a href="{{ url_for('home') }}" class="w3-text-gray w3-bar-item w3-padding-16
-                my-navlink-inactive">Home</a>
+                my-nav-link-inactive">Home</a>
             {% endif %}
 
             {% if request.path == url_for('projects_page') %}
                 <a href="{{ url_for('projects_page') }}" class="w3-text-gray w3-bar-item w3-padding-16
-                my-navlink-active">Projects</a>
+                my-nav-link-active">Projects</a>
             {% else %}
                 <a href="{{ url_for('projects_page') }}" class="w3-text-gray w3-bar-item w3-padding-16
-                my-navlink-inactive">Projects</a>
+                my-nav-link-inactive">Projects</a>
             {% endif %}
 
             {% if request.path == url_for('contact') %}
                 <a href="{{ url_for('contact') }}" class="w3-text-gray w3-bar-item w3-padding-16
-                my-navlink-active">Contact</a>
+                my-nav-link-active">Contact</a>
             {% else %}
                 <a href="{{ url_for('contact') }}" class="w3-text-gray w3-bar-item w3-padding-16
-                my-navlink-inactive">Contact</a>
+                my-nav-link-inactive">Contact</a>
             {% endif %}
 
         </nav>
