--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,14 +5,19 @@
 <main class="w3-container w3-center">
 
     <p class="w3-container">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, eum ipsum? Harum quas eveniet assumenda beatae voluptates vitae tempore, amet mollitia. Sit explicabo rem id quia officiis minus recusandae quasi unde illum, architecto ipsa cupiditate quidem assumenda non sequi mollitia ullam totam! Minus assumenda pariatur doloremque asperiores esse perspiciatis iusto.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, eum ipsum? Harum quas eveniet assumenda beatae
+        voluptates vitae tempore, amet mollitia. Sit explicabo rem id quia officiis minus recusandae quasi unde illum,
+        architecto ipsa cupiditate quidem assumenda non sequi mollitia ullam totam! Minus assumenda pariatur doloremque
+        asperiores esse perspiciatis iusto.
     </p>
     <p class="w3-container">
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae aut eum amet. Eaque, harum modi. Laboriosam itaque, dolores reiciendis odit repellendus laudantium quam sit temporibus quisquam tempore exercitationem, in sint?
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae aut eum amet. Eaque, harum modi. Laboriosam
+        itaque, dolores reiciendis odit repellendus laudantium quam sit temporibus quisquam tempore exercitationem, in
+        sint?
     </p>
     <p class="w3-container">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptas error, in vel repellat, voluptatum soluta illo numquam nobis ad dicta officia, deserunt eveniet qui.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab voluptas error, in vel repellat, voluptatum soluta
+        illo numquam nobis ad dicta officia, deserunt eveniet qui.
     </p>
-
 </main>
 {% endblock %}
