--- a/app/templates/project-drum-set.html
+++ b/app/templates/project-drum-set.html
@@ -33,7 +33,7 @@
                     </ul>
                     </article>
 
-                    <a class="cta" href="{{ project['prod'] }}" target="_blank" rel="noopener noreferrer">
+                    <a class="cta" href="{{ project['production'] }}" target="_blank" rel="noopener noreferrer">
                         <img class="cta__icon" src="{{ url_for('static', filename='images/pointer.svg') }}" alt="production icon">
                         View in production
                     </a>
