flexbox for centering. adding microblog html.

--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-   <main>
+   <main class="my-main my-main-error">
     <h1>500 - Internal Server Error</h1>
     <p>
         Sorry, something went wrong with the server.
