--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,7 +2,7 @@
 
 <!-- The body for the about page. -->
 {% block content %}
-<main class="w3-container w3-center">
+<main class="my-main my-main-home">
 
     <p class="w3-container">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, eum ipsum? Harum quas eveniet assumenda beatae
