--- a/app/templates/project-microblog.html
+++ b/app/templates/project-microblog.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
-<!-- The body for the dice-game project. -->
+<!-- The body for the microblog project. -->
 {% block content %}
-<!-- <main class="main main--project"> -->
 <main class="my-main">
     <div>
         <img class="my-project-hero"
