--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -6,6 +6,8 @@
 
 :root {
   --max-width-for-projects-column: 50rem;
+  /* A common readability setting */
+  --line-height-for-readability: 150%;
 }
 
 html {
@@ -53,7 +55,6 @@ body {
   flex-direction: column;
   max-width: 500px;
   padding: 0 1rem;
-  /* A common readability setting */
   line-height: 150%;
 }
 
@@ -279,6 +280,21 @@ body {
   text-decoration: none;
 }
 
+.my-main {
+  display: flex;
+  flex-direction: row;
+  justify-content: center; 
+  margin: 0 auto; 
+}
+.my-main-home,
+.my-main-error {
+  flex-direction: column;
+  max-width: 500px;
+  padding: 0 1rem;
+  /* A common readability setting */
+  line-height: var(--line-height-for-readability);
+}
+
 .my-contact-center-element{
   display: flex;
   justify-content: center;
@@ -319,6 +335,11 @@ body {
   transition: transform 0.2s ease-in-out;
 }
 
+.my-project-card-name {
+  padding-top: 0.3rem;
+  font-size: 1.25rem;
+}
+
 .my-project-card-link {
   text-decoration: none;
 }
@@ -330,4 +351,66 @@ body {
 
 .my-project-card:hover {
   transform: translate(0.35rem, -0.35rem)
+}
+
+.my-projects {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-column-gap: 1.25rem;
+  justify-content: center;
+  justify-items: center;
+  max-width: 21.875rem;
+  margin: 0 auto;
+}
+
+@media (min-width: 48.75em) {
+  .my-projects {
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 45rem;
+  }
+}
+
+@media (min-width: 70em) {
+  .my-projects {
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 68rem;
+  }
+}
+
+.my-project {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.2rem;
+  max-width: var(--max-width-for-projects-column);
+  padding: 0 1rem;
+}
+
+.my-project-hero {
+  width: 100%;
+  max-width: var(--max-width-for-projects-column);
+  margin-bottom: 1.5rem;
+}
+
+.my-project-content {
+  margin-bottom: 1rem;
+  line-height: var(--line-height-for-readability);
+}
+
+@media (min-width: 48.75em) {
+  .my-project {
+    flex-direction: row;
+    padding: 0;
+  }
+
+  .my-project-content {
+    flex: 7;
+    margin-right: 3rem;
+    padding: 0;
+  }
+}
+
+.my-project-heading {
+  margin: 0;
+  font-size: 2rem;
+  line-height: var(--line-height-for-readability);
 }
