--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-   <main>
+   <main class="my-main my-main-error">
     <h1>404 - Page Not Found</h1>
     <p>
         Sorry, we couldn't find the page you were looking for.
