--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -3,11 +3,12 @@
 <!-- Projects to be shown in a css grid via a for loop. -->
 <!-- Projects are described via a common dictionary format detailed in __init__.py. -->
 {% block content %}
-<main class="main">
-    <section class="projects">
+<main class="my-main">
+    <section class="my-projects">
         {% for project in projects %}
+        <!-- Use the class to remove the default link text decoration. -->
         <a class="my-project-card-link" href="{{ url_for('project', slug=project['slug']) }}">
-            <!-- The card (which is fully within an anchor tag - all clickable). -->
+            <!-- The card (which is fully within an anchor tag - entirely clickable). -->
             <article class="w3-card-2 w3-center my-project-card">
                 <!-- The name of this project. -->
                 <h2 class="my-project-card-name">{{ project["name"] }}</h2>
