--- a/app/templates/project-dice-game.html
+++ b/app/templates/project-dice-game.html
@@ -5,9 +5,7 @@
 <!-- <main class="main main--project"> -->
 <main class="my-main">
     <div>
-        <img class="my-project-hero"
-        src="{{ url_for('static', filename=project['hero']) }}"
-        alt="hero image">
+        <img class="my-project-hero" src="{{ url_for('static', filename=project['hero']) }}" alt="hero image">
 
         <article class="my-project">
             <article class="my-project-content">
@@ -16,29 +14,22 @@
                 </h2>
 
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio architecto minima saepe, maxime voluptatibus modi ea veritatis nulla dignissimos natus blanditiis eaque incidunt provident ducimus fugiat ipsum accusamus! Nulla incidunt maiores inventore doloribus blanditiis dolores veniam totam hic vitae quos.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio architecto minima saepe, maxime
+                    voluptatibus modi ea veritatis nulla dignissimos natus blanditiis eaque incidunt provident ducimus
+                    fugiat ipsum accusamus! Nulla incidunt maiores inventore doloribus blanditiis dolores veniam totam
+                    hic vitae quos.
                 </p>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias inventore magnam sint ab nobis architecto labore, officiis, incidunt harum tempore eaque exercitationem, ducimus animi accusamus earum distinctio commodi. Voluptatem, minima.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias inventore magnam sint ab nobis
+                    architecto labore, officiis, incidunt harum tempore eaque exercitationem, ducimus animi accusamus
+                    earum distinctio commodi. Voluptatem, minima.
                 </p>
             </article>
 
             <section>
-                <article class="project__meta-group">
-                    <h3 class="project__heading project__heading--meta>">Technologies used</h3>
-
-                    <ul class="technology-list">
-                        <li class="technology-list__item">HTML</li>
-                        <li class="technology-list__item">CSS</li>
-                        <li class="technology-list__item">JavaScript</li>
-                    </ul>
-                    </article>
-
-                    <a class="cta" href="{{ project['production'] }}" target="_blank" rel="noopener noreferrer">
-                        <img class="cta__icon" src="{{ url_for('static', filename='images/pointer.svg') }}" alt="production icon">
-                        View in production
-                    </a>
-
+                <a class="cta" href="{{ project['production'] }}" target="_blank" rel="noopener noreferrer">
+                    View in production
+                </a>
             </section>
         </article>
     </div>
