--- a/app/templates/project-microblog.html
+++ b/app/templates/project-microblog.html
@@ -1,31 +1,30 @@
 {% extends "base.html" %}
 
-<!-- The body for the microblog project. -->
+<!-- The body for the project. -->
 {% block content %}
 <main class="my-main">
     <div>
-        <img class="my-project-hero"
-        src="{{ url_for('static', filename=project['hero']) }}"
-        alt="hero image">
+        <img class="my-project-hero" src="{{ url_for('static', filename=project['hero']) }}" alt="hero image">
 
         <article class="my-project">
             <article class="my-project-content">
                 <h2 class="my-project-heading">
                     {{ project['name'] }}
                 </h2>
-
+                <p><button class="w3-button w3-green w3-round" type="button">
+                    View in production</button></p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio architecto minima saepe, maxime voluptatibus modi ea veritatis nulla dignissimos natus blanditiis eaque incidunt provident ducimus fugiat ipsum accusamus! Nulla incidunt maiores inventore doloribus blanditiis dolores veniam totam hic vitae quos.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio architecto minima saepe, maxime
+                    voluptatibus modi ea veritatis nulla dignissimos natus blanditiis eaque incidunt provident ducimus
+                    fugiat ipsum accusamus! Nulla incidunt maiores inventore doloribus blanditiis dolores veniam totam
+                    hic vitae quos.
                 </p>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias inventore magnam sint ab nobis architecto labore, officiis, incidunt harum tempore eaque exercitationem, ducimus animi accusamus earum distinctio commodi. Voluptatem, minima.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias inventore magnam sint ab nobis
+                    architecto labore, officiis, incidunt harum tempore eaque exercitationem, ducimus animi accusamus
+                    earum distinctio commodi. Voluptatem, minima.
                 </p>
             </article>
-            <section>
-                <a class="cta" href="{{ project['production'] }}" target="_blank" rel="noopener noreferrer">
-                    View in production
-                </a>
-            </section>
 
         </article>
     </div>
