--- a/app/templates/project-microblog.html
+++ b/app/templates/project-microblog.html
@@ -2,7 +2,7 @@
 
 <!-- The body for the project. -->
 {% block content %}
-<main class="my-main">
+<main class="my-main-flex-centering">
     <div>
         <img class="my-project-hero" src="{{ url_for('static', filename=project['hero']) }}" alt="hero image">
 
